--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,13 +24,13 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.0.2'
-    implementation 'androidx.core:core-ktx:1.0.2'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation kotlinstd.lib
+    implementation androidxDependencies.appCompat
+    implementation ktxdep.lib
+    implementation adxconstraintlayout.lib
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.2.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    androidTestImplementation adxTestLib.runner
+    androidTestImplementation adxTestLib.espresso
 
     implementation gson.lib
     testImplementation hamcrest.lib
