--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,8 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation adxTestLib.runner
     androidTestImplementation adxTestLib.espresso
+    implementation lifecycle.extensions
+    implementation lifecycle.java8compiler
 
     implementation gson.lib
     testImplementation hamcrest.lib
