Added viewpager to the project

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     androidTestImplementation adxTestLib.espresso
     implementation lifecycle.extensions
     implementation lifecycle.java8compiler
+    implementation viewpager2Adx.lib
 
     implementation gson.lib
     testImplementation hamcrest.lib
