--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "dependencies"]
 	path = dependencies
-	url = git@github.com:AniketSK/dependencies.git
+	url = https://github.com/AniketSK/dependencies
