Moved a testing lib back to test instead of it remaining in release

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,6 @@ dependencies {
     implementation gson.lib
     testImplementation hamcrest.lib
     implementation timber.lib
-    implementation livedataCommunityTestHelper.lib
+    testImplementation livedataCommunityTestHelper.lib
     testImplementation lifecycle.testhelper
 }
