--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,6 @@ dependencies {
     implementation timber.lib
     testImplementation livedataCommunityTestHelper.lib
     testImplementation lifecycle.testhelper
+    implementation androidxDependencies.recyclerView
+    implementation androidxDependencies.design
 }
