--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,15 @@ android {
         versionCode 4
         versionName "1.4"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = [
+                        "room.schemaLocation":"$projectDir/schemas".toString(),
+                        "room.incremental":"true",
+                        "room.expandProjection":"true"]
+            }
+        }
     }
     buildTypes {
         release {
@@ -37,6 +46,8 @@ android {
     dataBinding {
         enabled = true
     }
+
+
 
 }
 
@@ -70,5 +81,7 @@ dependencies {
     kaptAndroidTest dagger.compiler
     kaptAndroidTest dagger.androidAnnotationProcessor
 
-
+    implementation room.lib
+    implementation room.rxjava
+    testImplementation room.test
 }
