--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,16 +15,16 @@ android {
         versionCode 4
         versionName "1.4"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    }
 
-        javaCompileOptions {
-            annotationProcessorOptions {
-                arguments = [
-                        "room.schemaLocation":"$projectDir/schemas".toString(),
-                        "room.incremental":"true",
-                        "room.expandProjection":"true"]
-            }
+    kapt {
+        arguments {
+            arg("room.schemaLocation", "$projectDir/schemas".toString())
+            arg("room.incremental", true)
+            arg("room.expandProjection", true)
         }
     }
+
     buildTypes {
         release {
             minifyEnabled true
@@ -83,5 +83,6 @@ dependencies {
 
     implementation room.lib
     implementation room.rxjava
+    kapt room.compiler
     testImplementation room.test
 }
