--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.2'
         classpath kotlinstd.gradlePlugin
+        classpath navigation.classPathSafeArgs
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
