Using the navigation fragment instead of directly placing the existing

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,4 +93,5 @@ dependencies {
 
     implementation navigation.fragment
     implementation navigation.ui
+    implementation navigation.runtime
 }
