Added jodatime for time formatting

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,4 +98,5 @@ dependencies {
     implementation androidXFragment.lib
     testImplementation androidXFragment.test
 
+    implementation time.lib
 }
